--- a/index.html
+++ b/index.html
@@ -1,35 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+
+  <!-- BootStrap Script -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+  <!-- CSS StyleSheet -->
+
+  <link rel="stylesheet" href="style.css">
+
+
+
+
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <div class="row">
+    <div class="top-img col-lg-4">
+      <img src="images/bg-pattern-top.svg" alt="top-img">
+    </div>
 
-  80K
-  Followers
+    <div class=" col-lg-4 card">
 
-  803K
-  Likes
+      <section class="heading-section ">
+        <div class="heading-img">
+          <img class="card-img" src="images/bg-pattern-card.svg" alt="card-background">
+        </div>
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        <div class="heading-profile">
+          <img src="images/image-victor.jpg" alt="profile-img">
+        </div>
+
+        <div class="heading-text">
+          Victor Crest
+          26
+          London
+        </div>
+
+      </section>
+
+      <div class="stats-section">
+        80K
+        Followers
+
+        803K
+        Likes
+
+        1.4K
+        Photos
+      </div>
+    </div>
+
+
+    <div class="bottom-img col-lg-4">
+      <img src="images/bg-pattern-bottom.svg" alt="bottom-img">
+    </div>
+  </div>
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Your Name Here</a>. -->
   </div>
 </body>
+
 </html>
