--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 <body>
   <div class="row">
-    <div class="top-img col-lg-4">
-      <img src="images/bg-pattern-top.svg" alt="top-img">
+    <div class=" col-lg-4">
+      <img class="top-img" src="images/bg-pattern-top.svg" alt="top-img">
     </div>
 
     <div class=" col-lg-4 card">
@@ -69,8 +69,8 @@
     </div>
 
 
-    <div class="bottom-img col-lg-4">
-      <img src="images/bg-pattern-bottom.svg" alt="bottom-img">
+    <div class=" col-lg-4">
+      <img class="bottom-img" src="images/bg-pattern-bottom.svg" alt="bottom-img">
     </div>
   </div>
   <!-- <div class="attribution">
