--- a/index.html
+++ b/index.html
@@ -45,26 +45,34 @@
         </div>
 
         <div class="heading-profile">
-          <img src="images/image-victor.jpg" alt="profile-img">
+          <img class="profile-img" src="images/image-victor.jpg" alt="profile-image">
         </div>
 
         <div class="heading-text">
-          Victor Crest
-          26
-          London
+          <h4>Victor Crest <span>26</span> </h4>
+          <p> London</p>
         </div>
 
       </section>
 
+      <hr>
+
       <div class="stats-section">
-        80K
-        Followers
 
-        803K
-        Likes
-
-        1.4K
-        Photos
+        <div class="row">
+          <div class="followers col-lg-4">
+            <h5 class="stats-heading">80K</h5>
+            <p class="stats-description">Followers</p>
+          </div>
+          <div class="likes col-lg-4">
+            <h5 class="stats-heading">803K</h5>
+            <p class="stats-description">Likes</p>
+          </div>
+          <div class="photos col-lg-4">
+            <h5 class="stats-heading">1.4K</h5>
+            <p class="stats-description">Photos</p>
+          </div>
+        </div>
       </div>
     </div>
 
