Update on Desktop Version

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+
   <!-- BootStrap Script -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -37,7 +42,7 @@
       <img class="top-img" src="images/bg-pattern-top.svg" alt="top-img">
     </div>
 
-    <div class=" col-lg-4 card">
+    <div class=" col-lg-3 card">
 
       <section class="heading-section ">
         <div class="heading-img">
@@ -49,27 +54,27 @@
         </div>
 
         <div class="heading-text">
-          <h4>Victor Crest <span>26</span> </h4>
+          <h6>Victor Crest <span>26</span> </h6>
           <p> London</p>
         </div>
-
+        <hr>
       </section>
 
-      <hr>
+
 
       <div class="stats-section">
 
         <div class="row">
-          <div class="followers col-lg-4">
-            <h5 class="stats-heading">80K</h5>
+          <div class="col-lg-4" id="followers">
+            <h6 class="stats-heading">80K</h6>
             <p class="stats-description">Followers</p>
           </div>
-          <div class="likes col-lg-4">
-            <h5 class="stats-heading">803K</h5>
+          <div class="col-lg-4" id="likes">
+            <h6 class="stats-heading">803K</h6>
             <p class="stats-description">Likes</p>
           </div>
-          <div class="photos col-lg-4">
-            <h5 class="stats-heading">1.4K</h5>
+          <div class=" col-lg-4" id="photos">
+            <h6 class="stats-heading">1.4K</h6>
             <p class="stats-description">Photos</p>
           </div>
         </div>
