updates in the Mobile version

--- a/index.html
+++ b/index.html
@@ -64,16 +64,18 @@
 
       <div class="stats-section">
 
-        <div class="row">
-          <div class="col-lg-4" id="followers">
+        <div class="row stats-card">
+          <div class="col-lg-4 stat-card" id="followers">
             <h6 class="stats-heading">80K</h6>
             <p class="stats-description">Followers</p>
           </div>
-          <div class="col-lg-4" id="likes">
+
+          <div class="col-lg-4 stat-card" id="likes">
             <h6 class="stats-heading">803K</h6>
             <p class="stats-description">Likes</p>
           </div>
-          <div class=" col-lg-4" id="photos">
+
+          <div class=" col-lg-4 stat-card" id="photos">
             <h6 class="stats-heading">1.4K</h6>
             <p class="stats-description">Photos</p>
           </div>
